Fixed some layout issues

--- a/_posts/2016-12-18-ann01.md
+++ b/_posts/2016-12-18-ann01.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: First post about the ANN
+title: mArIo
+maintitle: First post about the ANN
 tags: [ann, neural network, december]
 ---
 
